banner spacing issue fixed

--- a/css/custom.css
+++ b/css/custom.css
@@ -722,6 +722,9 @@ p.title-text {
         margin-top: 50px;
         padding: 30px 0 80px;
     }
+    .banner-section {
+        padding-top: 45px;
+    }
 }
 @media(max-width: 575px) {
     .right-head h3,
@@ -773,5 +776,8 @@ p.title-text {
     .product-section {
         margin-top: 0;
         padding: 30px 0 60px;
+    }
+    .banner-section {
+        padding-top: 30px;
     }
 }
